# ai-studio

./: .gitignore  LICENSE.txt  README.md  aws-sagemaker-first.ipynb  environment.yml  find-usage.sh  main.py  pyproject.toml  replace-text.sh  requirements.txt  test.py
examples/bbc4-articles/: bbc4-articles-rfc_01.py  environment.yml  prepare.py  prepare_data_scheme.py  rand-for-clas.ipynb  rand-for-clas.py  requirements.txt  rfc.ipynb
src/aistudio/abstraction/: base_types.py
src/aistudio/common/: common_utils.py
src/aistudio/data/: text_utils.py
src/aistudio/data/json/: json_utils.py
src/aistudio/data/meta/: module_utils.py
src/aistudio/exception/: exception_utils copy.py  exception_utils.py
src/aistudio/model/: model_utils.py
src/aistudio/plot/: plot_utils.py
src/aistudio/runtime/: runtime_utils.py
src/aistudio/statistics/: stats_utils.py
src/aistudio/textprocess/: text_prepare.py
src/modl/: testDep.py
src/prep/: dataPreparer.py
tests/aistudio/data/: test_text_utils.py
tests/aistudio/data/cleanse/text/: test_text_utils.py
tests/aistudio/data/json/: test_json_utils.py
tests/aistudio/data/meta/: test_module_utils.py
tests/aistudio/exception/: test_exception_utils.py
tests/aistudio/plot/: test_plot_utils.py
tests/aistudio/runtime/: test_runtime_utils.py
tests/aistudio/statistics/: test_stat_utils.py
tutorials/numpy/: array-creation.ipynb  environment.yml  requirements.txt  runner.py  test-array.csv
