[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-studio"
version = "0.0.2"
authors = [
  { name="Olgun Erguezel", email="olgunerguzel@gmail.com" },
]
description = "ai-ml development and testing kit"
readme = "README.md"
requires-python = ">=3.7"
## https://peps.python.org/pep-0631/
dependencies = [
   'exc-help @ git+ssh://git@github.com/erguzel/exc-help.git' ## requires private key
]
classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Science/Research",
     "Intended Audience :: Information Technology",
     "License :: OSI Approved :: MIT License",  
     "Operating System :: OS Independent",        
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["examples.*", "tutorials.*","tests.*","models.*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[project.urls]
"Homepage" = "https://github.com/erguzel/ai-studio"
"Bug Tracker" = "https://github.com/erguzel/ai-studio"